project(glew)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set( LIBRARY_OUTPUT_PATH ${ROOT_BINARY_DIR}/lib )


if(WIN32)
	set( LIBS opengl32 )
	add_definitions( -DWIN32_MEAN_AND_LEAN -DGLEW_STATIC -DVC_EXTRALEAN -DGLEW_BUILD -D_CRT_SECURE_NO_WARNINGS )
endif()

if(UNIX)
	set( LIBS GL )
	list( APPEND LIBS X11 dl Xext )
endif()

add_library( glew STATIC glew.c )

target_link_libraries( glew ${LIBS} )

if(MSVC)
	set_target_properties( glew PROPERTIES
	LIBRARY_OUTPUT_DIRECTORY            ${CMAKE_CURRENT_BINARY_DIR}
	LIBRARY_OUTPUT_DIRECTORY_DEBUG      ${CMAKE_CURRENT_BINARY_DIR}
	LIBRARY_OUTPUT_DIRECTORY_RELEASE    ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY            ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG      ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE    ${CMAKE_CURRENT_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY            ${CMAKE_CURRENT_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG      ${CMAKE_CURRENT_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE    ${CMAKE_CURRENT_BINARY_DIR}
	)
endif()
